turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: ')' expected but '}' found.
        }
        ^LangtonsAnt:34: error: ')' expected but '}' found.
        }
        ^